fix swagger and login localstorage
