# backend/swagger/swagger.json
@@ -19,6 +19,7 @@
                     "Auth"
                 ],
                 "summary": "Authenticate using a Google token",
+                "operationId": "googleAuth",
                 "parameters": [
                     {
                         "description": "The google token request. Probably received from google oAuth",
@@ -34,7 +35,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/rest.UserResponse"
+                            "$ref": "#/definitions/rest.UserResponseDTO"
                         }
                     }
                 }
@@ -50,7 +51,7 @@
                 }
             }
         },
-        "rest.UserResponse": {
+        "rest.UserResponseDTO": {
             "type": "object",
             "properties": {
                 "firstName": {
